[project]
name = "cz_conventional_plus"
version = "0.1.3"
description = "A commitizen configuration subclassing 'cz_conventional_commits', adding 'chore' and 'revert' commit types."
authors = [
    {name = "Adrien Bachelart", email = "hello@adrienbc.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "commitizen (>=4.10.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project.entry-points."commitizen.plugin"]
cz_conventional_plus = "cz_conventional_plus:ConventionalPlusCz"


[dependency-groups]
dev = [
    "python-semantic-release (>=10.5.2,<11.0.0)"
]
